# assemblyline

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: AssemblyLine.cmake  assemblyline-config.cmake.in
docs/: README.md
examples/: CMakeLists.txt  README.md
examples/createprocess/: CMakeLists.txt  createprocess.hpp  createprocess_test.cpp  entry.cpp
examples/gtest/: CMakeLists.txt
examples/messagebox/: CMakeLists.txt  entry.cpp  messagebox.hpp  messagebox_test.cpp
include/al/: al.hpp  hash.hpp  import.hpp  intrinsic.hpp  pe.hpp  peb.hpp  prng.hpp  string.hpp
include/al/gtest/: pic.hpp
src/: CMakeLists.txt  al.cppm  hash.cppm  hash_test.cpp  import.cpp  import.cppm  import_test.cpp  prng.cppm  string.cppm
src/intrinsic/: CMakeLists.txt  intrinsic.cpp  intrinsic_test.cpp  memcmp.cpp  memcpy.cpp  memmove.cpp  memset.cpp  strlen.cpp  wcslen.cpp
src/pe/: export.cpp  section.cpp
src/peb/: peb.cpp
src/x64/: CMakeLists.txt  align.asm  entry.asm  import.asm  stack-align.txt
tests/: CMakeLists.txt  README.md  pic.hpp
tests/al-pic/: CMakeLists.txt  entry.cpp
tests/c/: CMakeLists.txt  entry.c
tests/cast/: CMakeLists.txt  cast.hpp  cast_test.cpp  entry.cpp
tests/deprecate-imports/: CMakeLists.txt  imports_test.cpp
tests/deprecate-runner/: CMakeLists.txt  main.cpp
tests/deprecate-strings/: CMakeLists.txt  entry.cpp  strings.hpp  strings_test.cpp
tests/dynamic-lib/: CMakeLists.txt  test.cpp
tests/imports/: CMakeLists.txt  entry.cpp  imports.hpp  imports_test.cpp
tests/link/: CMakeLists.txt
tests/link/dll/: CMakeLists.txt  dll.hpp  entry.cpp
tests/link/exe/: CMakeLists.txt  entry.cpp
tests/link/lib/: CMakeLists.txt  entry.cpp
tests/link/pic/: dll-entry.cpp  exe-entry.cpp  exe.hpp  test.hpp
tests/link/runner/: CMakeLists.txt  main.cpp
tests/linkage/crt-runner/: CMakeLists.txt  main.cpp
tests/linkage/pic/: CMakeLists.txt
tests/linking/: CMakeLists.txt
tests/linking/crt-runner/: CMakeLists.txt  main.cpp
tests/linking/pic/: CMakeLists.txt  dll-entry.cpp  dll.hpp  exe-entry.cpp  test.cpp
tests/pic/: CMakeLists.txt  entry.cpp  pic.hpp  pic_test.cpp
tests/position-independence/: CMakeLists.txt  entry.cpp  position-independence_test.cpp
tests/strings/: CMakeLists.txt  strings_test.cpp
tests/stub-module/: CMakeLists.txt  main.cpp  stub-module.hpp
tools/: CMakeLists.txt  README.md  debug.ld.in
tools/dump/: CMakeLists.txt  README.md  main.cpp
tools/ld/: dwarf.ld  main.ld
tools/run/: CMakeLists.txt  run.cppm
